# sqlite-ovsdb-lib

./: CMakeLists.txt  README.md
include/: sqlite_virtual.h
src/: sqlite_virtual.c
